# ogs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Applications/: CMakeLists.txt
Applications/ApplicationsLib/: ProjectData.cpp
Applications/Cui/: CMakeLists.txt  main.cpp
Applications/DataExplorer/: DataExplorer.cmake
Applications/DataExplorer/DataView/: CMakeLists.txt
Applications/FileIO/: CsvInterface.cpp  CsvInterface.h
Applications/Utils/FileConverter/: CMakeLists.txt  Raster2QuadMesh.cpp
Applications/Utils/MeshEdit/: CMakeLists.txt  addInletAndOutlet.cpp  extrude.cpp
Applications/Utils/PostProcessing/: postLIE.cpp
AssemblerLib/: ComponentGlobalIndexDict.h  ComputeSparsityPattern.cpp  ComputeSparsityPattern.h  LocalToGlobalIndexMap.cpp  LocalToGlobalIndexMap.h  MapTools.h  MeshComponentMap.cpp  MeshComponentMap.h  VecMatBuilder.cpp  VecMatBuilder.h  VectorMatrixAssembler.h
BaseLib/: CMakeLists.txt  CodingTools.h  DebugTools.h  FileTools.cpp  FileTools.h  LogogCustomCout.h  MPITools.h  StringTools.cpp  StringTools.h
FileIO/: CMakeLists.txt  TINInterface.cpp  readMeshFromFile.cpp
GeoLib/: AABB.h  AnalyticalGeometry.cpp  CMakeLists.txt  Polygon.cpp
MathLib/: CMakeLists.txt  DataType.h  Point3d.h  TemplateVectorX.h  Types.h  Vector3.h
MeshGeoToolsLib/: MeshNodeSearcher.cpp  MeshNodeSearcher.h  MeshNodesOnPoint.cpp  MeshNodesOnPoint.h  convertMeshToGeo.cpp  convertMeshToGeo.h
MeshLib/: CoordinateSystem.h  ElementCoordinatesMappingLocal.cpp  ElementCoordinatesMappingLocal.h  (+5 more)
NumLib/: CMakeLists.txt
NumLib/Coupling/: AbstractPartitionedProblem.h  CouplingStrucutreBuilder.h  ICoupledProblem.h
NumLib/Coupling/Algorithm/: AbstractIterativePartitionedMethod.h  AbstractPartitionedStaggeredMethod.h
NumLib/DOF/: LocalToGlobalIndexMap.cpp  MeshComponentMap.cpp
NumLib/Extrapolation/: LocalLinearLeastSquaresExtrapolator.h
NumLib/Fem/: FemEnums.h  PolynomialOrder.h  ShapeMatrixPolicy.h
NumLib/Fem/BC/: DirichletBC2FEM.cpp  DirichletBC2FEM.h  IC2FEM.cpp  IC2FEM.h  NeumannBC2FEM.cpp  NeumannBC2FEM.h
NumLib/Fem/CoordinatesMapping/: NaturalCoordinatesMapping-impl.h  NaturalCoordinatesMapping.h  NaturalCoordinatesMapping.tpp  ShapeData.h  ShapeMatrices-impl.h  ShapeMatrices.h
NumLib/Fem/FiniteElement/: C0IsoparametricElements.h  FiniteElementType.h  IFemElement.cpp  IFemElement.h  TemplateIsoparametric.h
NumLib/Fem/Integration/: GaussIntegrationPolicy.h  IIntegration.h  IntegrationGaussPrism.h  IntegrationGaussPyramid.h  IntegrationGaussRegular-impl.h  IntegrationGaussRegular.h  IntegrationGaussTet.h  IntegrationGaussTri.h
NumLib/Fem/Tools/: FeObjectCachePerFeType.cpp  FeObjectCachePerFeType.h  FeObjectContainerPerElement.h  FeObjectContainerPerFeType.h  FemElementCatalog.cpp  FemElementCatalog.h  FemElementFactoryBase.h  FemElementFactoryImpl.h  IFeObjectContainer.h  IMeshElementToFemElementType.h  LagrangeFeObjectContainer.cpp  LagrangeFeObjectContainer.h  LagrangeFemElementCatalogBuilder.cpp  LagrangeFemElementCatalogBuilder.h  MeshElementShapeToFemElementType.h
NumLib/Function/: DiscreteDataConvergenceCheck.h  FemIntegrationPointFunction.h  FemNodalFunction.h  IClonable.h  IFunction.h  ITXDiscreteFunction.h  ITXFunction.h  TXCompositFunction.h  TXFunctionBuilder.cpp  TXFunctionBuilder.h  TXFunctionConstant.h  TXFunctionTimeCurve.h  TXVectorFunctionAsColumnData.h  TXWrapped3DVectorFunction.h
NumLib/IOSystem/: DynamicIOSystem.h  IIOSystem.h  NamedIO.h  UnnamedParameterSet.h
NumLib/Nonlinear/: DiscreteNonlinearSolverFactory.h  INonlinearSolver.h  Linear.h  Newton.h  NonlinearSolverOption.h  Picard.h  TemplateDiscreteNonlinearSolver.h
NumLib/Nonlinear/PETSc/: PETScSNES.h
NumLib/ODESolver/: EquationSystem.h
NumLib/TimeStepping/: CreateTimeStepper.cpp  ITransientSystem.h  TimeSteppingController.cpp  TimeSteppingController.h
NumLib/TimeStepping/Algorithms/: CreateExternalTimeStepping.cpp  CreateExternalTimeStepping.h  CreateExternalTimeSteppingController.cpp  CreateExternalTimeSteppingController.h  ExternalTimeStepping.cpp  ExternalTimeStepping.h  ExternalTimeSteppingController.cpp  ExternalTimeSteppingController.h  FixedTimeStepping.cpp  FixedTimeStepping.h  ITimeStepAlgorithm.h  IterationNumberBasedAdaptiveTimeStepping.cpp  IterationNumberBasedAdaptiveTimeStepping.h  TimeStepAlgorithm.h
NumLib/TransientCoupling/: AsyncPartitionedSystem.cpp  AsyncPartitionedSystem.h  TransientMonolithicSystem.h
SolutionLib/: CMakeLists.txt
SolutionLib/Core/: AbstractTimeSteppingAlgorithm.h  TimeSteppingProblem.h
SolutionLib/Fem/: FemDirichletBC.cpp  FemDirichletBC.h  FemIC.cpp  FemIC.h  FemIVBVProblem.h  FemJacobian.cpp  FemJacobian.h  FemLinearEQS.cpp  FemLinearEQS.h  FemNeumannBC.cpp  FemNeumannBC.h  FemResidualEQS.cpp  FemResidualEQS.h  FemSourceTerm.cpp  FemSourceTerm.h  FemVariable.h  IElementAssembler.h  IFemNeumannBC.h  SingleStepFEM.cpp  SingleStepFEM.h
THMCLib/: CMakeLists.txt  FeElementData.h  FemVariableBuilder.cpp  FemVariableBuilder.h  GeoProcessBuilder.cpp  GeoProcessBuilder.h  Ogs5ToOgs6.cpp  Ogs5ToOgs6.h  Ogs6FemData.cpp  Ogs6FemData.h  OutputController.cpp  OutputController.h  SetupModules.cmake  SimulationInfo.cpp  THMCSimulator.cpp  THMCSimulator.h  TimeSteppingControllerWithOutput.h
THMCLib/MaterialLib/: BasicModel.h  Compound.h  FluidDensity.h  FluidModel.h  FluidSpecificHeat.h  FluidThermalConductivity.h  FluidViscosity.h  Fracture.h  MaterialProperties.h  Models.cpp  Models.h  PorousMediumHeatCapacity.h  PorousMediumModel.h  PorousMediumThermalConductivity.h  SolidModel.h
THMCLib/Output/: CMakeLists.txt  OutputController.cpp  OutputController.h  OutputTimingBuilder.cpp  OutputTimingList.h  OutputTimingStepPeriodic.h  PVDOutput.cpp  PVDOutput.h  TecplotOutput.cpp
THMCLib/ProcessLib/: AbstractProcessBuilder.cpp  AbstractProcessBuilder.h  AbstractTimeIndependentProcess.h  AbstractTransientProcess.cpp  AbstractTransientProcess.h  Process.h  ProcessFactoryBase.h  ProcessFactoryImpl.h  ProcessInfo.h
THMCLib/Tests/: CMakeLists.txt  ComparisonTools.cpp  ComparisonTools.h  ModuleTestTools.h  TestEnvironment.h  main.cpp
(+404 files in other folders)
