#Source files grouped by a directory
GET_SOURCE_FILES(SOURCES_NUMLIB)
set(SOURCES ${SOURCES_NUMLIB})

GET_SOURCE_FILES(SOURCES_FEM Fem)
set(SOURCES ${SOURCES} ${SOURCES_FEM})
GET_SOURCE_FILES(SOURCES_FEM_COORDINATESMAPPING Fem/CoordinatesMapping)
set(SOURCES ${SOURCES} ${SOURCES_FEM_COORDINATESMAPPING})
GET_SOURCE_FILES(SOURCES_FEM_FINTIEELEMENT Fem/FiniteElement)
set(SOURCES ${SOURCES} ${SOURCES_FEM_FINTIEELEMENT})
GET_SOURCE_FILES(SOURCES_FEM_INTEGRATION Fem/Integration)
set(SOURCES ${SOURCES} ${SOURCES_FEM_INTEGRATION})
GET_SOURCE_FILES(SOURCES_FEM_SHAPEFUNCTION Fem/ShapeFunction)
set(SOURCES ${SOURCES} ${SOURCES_FEM_SHAPEFUNCTION})
GET_SOURCE_FILES(SOURCES_FEM_TOOLS Fem/Tools)
set(SOURCES ${SOURCES} ${SOURCES_FEM_TOOLS})
GET_SOURCE_FILES(SOURCES_FEM_BC Fem/BC)
set(SOURCES ${SOURCES} ${SOURCES_FEM_BC})

GET_SOURCE_FILES(SOURCES_TIMESTEP TimeStepping)
GET_SOURCE_FILES(SOURCES_TIMESTEP_ALGORITHMS TimeStepping/Algorithms)
set(SOURCES ${SOURCES} ${SOURCES_TIMESTEP} ${SOURCES_TIMESTEP_ALGORITHMS})

GET_SOURCE_FILES(SOURCES_FUNCTION Function)
set(SOURCES ${SOURCES} ${SOURCES_FUNCTION})
GET_SOURCE_FILES(SOURCES_DISTRIBUTION Distribution)
set(SOURCES ${SOURCES} ${SOURCES_DISTRIBUTION})

GET_SOURCE_FILES(SOURCES_COUPLING Coupling)
set(SOURCES ${SOURCES} ${SOURCES_COUPLING})
GET_SOURCE_FILES(SOURCES_IOSYSTEM IOSystem)
set(SOURCES ${SOURCES} ${SOURCES_IOSYSTEM})
GET_SOURCE_FILES(SOURCES_NONLINEAR Nonlinear)
set(SOURCES ${SOURCES} ${SOURCES_NONLINEAR})
if(OGS_USE_PETSC)
	GET_SOURCE_FILES(SOURCES_NONLINEAR_PETSC Nonlinear/PETSc)
	set(SOURCES ${SOURCES} ${SOURCES_NONLINEAR_PETSC})
endif()

GET_SOURCE_FILES(SOURCES_TRANSIENT_COUPLING TransientCoupling)
set(SOURCES ${SOURCES} ${SOURCES_TRANSIENT_COUPLING})


include_directories(
	.
	${CMAKE_CURRENT_SOURCE_DIR}/../BaseLib
	${CMAKE_CURRENT_SOURCE_DIR}/../GeoLib
	${CMAKE_CURRENT_SOURCE_DIR}/../MathLib
	${CMAKE_CURRENT_SOURCE_DIR}/../MeshLib
	${CMAKE_CURRENT_SOURCE_DIR}/../MeshGeoToolsLib
)


# Create the library
add_library(NumLib STATIC ${SOURCES})

set_target_properties(NumLib PROPERTIES LINKER_LANGUAGE CXX)

target_link_libraries(NumLib INTERFACE
	BaseLib
	GeoLib
	MathLib
	MeshLib
	MeshGeoToolsLib
	logog
)

if(TARGET Eigen)
	add_dependencies(NumLib Eigen)
endif()
if(TARGET Boost)
	add_dependencies(NumLib Boost)
endif()
